--- a/Mo's Algorithm/总述.md
+++ b/Mo's Algorithm/总述.md
@@ -1,1 +1,2 @@
-莫队算法是一种常见的 **分块** 算法 其核心思想是将询问 **离线** 然后分块 通过特定的顺序实现 $O(N \sqrt{N})$ 的复杂度来解决区间问题
+莫队算法是一种常见的 **分块** 算法 其核心思想是将询问 **离线** 然后分块
+再通过特定的排序降低时间复杂度的算法
