--- a/树上差分/总述.md
+++ b/树上差分/总述.md
@@ -15,3 +15,5 @@
   ​		    然后再 $dfs$ 遍历树 对于当前节点 $u$ 先 $dfs$ 它的所有儿子 $v$  再遍历 $u$ 的每条边 $e$ 则 $w[e]+=sum[v]$
 
   ​		    然后对于点权 $sum$ 还是同样的 对于所有的儿子进行 $sum[u]+=sum[v]$    $(以上式子中w代表边权)$
+
+- 另外 , 树上差分也可以和树状数组结合, 因为最后一步 $dfs$ 的过程实际上是在计算某个节点 $u$ 的子树 (包括其本身) 和 , 可以利用预处理 $dfs$ 序 然后区间修改单点查询的树状数组解决
