--- a/CDQ/总述.md
+++ b/CDQ/总述.md
@@ -1,3 +1,5 @@
-CDQ分治法是一种用于解决**三维**偏序问题的算法
-在利用树状数组解决二维偏序问题的基础上，我们必须运用CDQ分治将其扩展至三维偏序。
-其想法本质是归并排序 $+$ 树状数组 同时兼用了双指针来实现
+CDQ分治法是一种用于解决**三维**偏序问题的算法。在利用树状数组解决二维偏序问题的基础上，我们必须运用CDQ分治将其扩展至三维偏序。其想法本质是归并排序 $+$ 树状数组 同时兼用了双指针来实现
+
+考虑最经典的三维偏序问题 假设我们现在要求满足 $a_i\le a_j$ $b_i \le b_j$ $c_i \le c_j$ 的数对 $(i,j)$ 数量
+
+那么我们的策略就是 , 将按照 $a$ 数组从小到大排序 , 利用归并分治将 $b$ 数组排序 在归并分治左边和右边合并的过程中 利用树状数组统计 $c$ 数组也满足条件的数对即可
