--- a/Mo's Algorithm/普通莫队/总述.md
+++ b/Mo's Algorithm/普通莫队/总述.md
@@ -1,4 +1,19 @@
-普通莫队
+用来解决一些可以**离线**的区间问题
 
+考虑朴素的区间问题做法，我们可以用 $l$ 和 $r$ 来表示我们当前的区间 $ql$ 和 $qr$ 表示查询的区间
 
-时间复杂度 : $O(N\sqrt{N})$
+那么我只需要让 $l$ 和 $r$ 移动即可维护区间信息 但显然这样的时间复杂度是 $O(n^2)$
+
+核心思想是将询问按照一定的规律排序使得上述过程的时间复杂度为 $O(n\sqrt{n})$
+
+采用 **分块** 的方法 , 在普通莫队中 , 我们一般将块长 $B$ 定义为 $\sqrt{n}$ 
+
+然后对于询问的 $l$ 和 $r$ 我们另外再记录一个 $bl$ 表示区间左端点的块号
+
+于是我们的排序策略是 **以 $bl$ 从小到大为第一关键字 以 $r$ 从小到大为第二关键字**
+
+按照此顺序执行各个询问 区间滑动的最终复杂度为$O(n\sqrt{n})$
+
+然后再进行区间滑动的过程即可
+
+$add$  和 $dec$ 的内容根据具体题目决定
