--- a/树链剖分/重链剖分/总述.md
+++ b/树链剖分/重链剖分/总述.md
@@ -21,3 +21,6 @@
 - 那么对子树进行操作事实上就是对线段树的单次操作 ；而对两点间的路径进行操作稍微麻烦，我们要不断向上找到多条重链,每条重链的信息都要利用线段树操作
 - 对子树的操作复杂度为 $O(\log n)$  而 对路径的操作复杂度为 $O(\log^2 n)$
 - 树链剖分还可以用来快速地求 $LCA$  ，让 $u$ 和 $v$ 不断向上跳跳到同一条重链，此时 $dep$ / $dfn$ 较小的点即为 $LCA$ 
+
+另外 , 树链剖分是对点权进行操作的 , 若题目中给我们的是边权的条件，应该如何转化呢？**对于一条从 $u$ 到 $v$ 的边，假设(两者在树上的关系为) $u$ 为父亲 $v$ 为儿子，把边权转化为 $v$ 点的点权即可** 也就是说，我们可以把边权**下放**给这条边**深度较大**的节点
+而在查询的时候也是一样，查询**路径上每条边的深度较大点的点权**即可
