--- a/换根dp/总述.md
+++ b/换根dp/总述.md
@@ -1,1 +1,4 @@
+换根$dp$常见于在无根树中确定某一个点为根 使得满足题目的条件
 
+通常需要进行两边 $dfs$ 第一次收集后续 $dp$ 转移需要的信息 以及 1 作为根节点的答案
+而第二次 $dfs$ 为换根的过程 当根节点从 $u$ 转移到 $v$ 时 推导出 $v$ 点的代价为多少
