--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -1,1 +1,20 @@
-线性方程组
+ 高斯消元法是用来解线性方程组的方法 其本质属于线性代数的内容 
+ 按照题目类型 大致可以将高斯消元分为三类
+ - 加法方程组
+ - 异或方程组
+ - 同余方程组
+我们先从加法方程组入手来讲解高斯消元
+假设我们操作的是 $n$ 行 $n$ $+$ $1$ 列的矩阵
+因为即使 $n$ 行 $n$ $+$ $1$ 列的矩阵 , 我们仍然可以通过增加元或者增加方程的方法成为这样的矩阵
+我们从 $1$ 开始遍历每一个主元列 对于当前主元列 $i$ , 我们要去找 **非主元列且值的绝对值最大的**的行 记作 $line$
+那么如何判断非主元列呢? 假设当前判断的列是第 $j$ 列 其为主元列的条件为 $j$ $<$ $i$ 且 $a[j][j]$非0
+然后将第 $i$ 行和第 $line$ 行整体交换 , 判断第 $a[i][i]$ 是否为 $0$ , 如果为 $0$ 则表示当前列 **非主元列**
+否则若当前列为主元列 , 那么先将第 $i$ 行第 $i$ 列的值变为 $1$ 也就是第 $i$ 行全体 $/$ $a[i][i]$
+然后遍历每一行 使得其他所有行的第 $i$ 列全部消为 $0$
+消元结束之后遍历每一行 设当前为第 $i$ 行
+若 $a[i][i]$ $=$ $0$ 则有两种情况
+    1. $a[i][n + 1]$ $=$ $0$ 则表明该列所对应元为自由元
+    2. $a[i][n + 1]$ $!=$ $0$  则表明方程存在矛盾 无解
+否则 若唯一解 那么 $x_i$ 即为 $a[i][n + 1]$
+若非唯一解 则主元的取值取决于自由元的取值 一旦自由元已经确定 那么主元必定唯一确定
+   
