--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -14,19 +14,6 @@
 我们先从最常见的 **加法方程组** 入手。
 
 ---
-其增广矩阵为一个 $n$ $\times$ $(n+1)$ 的矩阵：
-
-
-A = 
-$\begin{bmatrix}
-a_{1,1} & a_{1,2} & \cdots & a_{1,n} & | & b_1 \\
-a_{2,1} & a_{2,2} & \cdots & a_{2,n} & | & b_2 \\
-\vdots  & \vdots  & \ddots & \vdots  & | & \vdots \\
-a_{n,1} & a_{n,2} & \cdots & a_{n,n} & | & b_n
-\end{bmatrix}
-$
-
-
 
 假设我们操作的是 $n$ 行 $n$ $+$ $1$ 列的矩阵
 
@@ -34,7 +21,7 @@ $
 
 我们从 $1$ 开始遍历每一个主元列 对于当前主元列 $i$ , 我们要去找 **非主元列且值的绝对值最大的**的行 记作 $line$
 
-那么如何判断非主元列呢? 假设当前判断的列是第 $j$ 列 其为主元列的条件为 $j$ $<$ $i$ 且 $a[j][j]$非0
+那么如何判断非主元列呢? 假设当前判断的列是第 $j$ 列 其为主元列的条件为 $j$ $<$ $i$ 且 $a[j][j]$非 $0$
 
 然后将第 $i$ 行和第 $line$ 行整体交换 , 判断第 $a[i][i]$ 是否为 $0$ , 如果为 $0$ 则表示当前列 **非主元列**
 
@@ -45,10 +32,14 @@ $
 消元结束之后遍历每一行 设当前为第 $i$ 行
 
 若 $a[i][i]$ $=$ $0$ 则有两种情况
-
-    1. $a[i][n + 1]$ $=$ $0$ 则表明该列所对应元为自由元
-    2. $a[i][n + 1]$ $!=$ $0$  则表明方程存在矛盾 无解
+    1. $a[i][n + 1]$ $=$ $0$ 则表明该列所对应元为**自由元**
+    2. $a[i][n + 1]$ $!=$ $0$  则表明方程存在矛盾 **无解**
 否则 若唯一解 那么 $x_i$ 即为 $a[i][n + 1]$
 
 若非唯一解 则主元的取值取决于自由元的取值 一旦自由元已经确定 那么主元必定唯一确定
-   
+
+| 情况     | 条件                              | 结果                   |
+| -------- | -------------------------------  | ---------------------- |
+| 无解     | 存在一行主元为 $0$ 且常数项不为 $0$ | ❌ 矛盾方程组          |
+| 唯一解   | 每一列都有主元，无自由元            | ✅ 唯一解              |
+| 无穷多解 | 存在自由元                         | ♾️ 多解，解空间维数 > 0 |
