--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -33,9 +33,9 @@
 
 若 $a[i][i]$ $=$ $0$ 则有两种情况
 
-    1. $a[i][n + 1]$ $=$ $0$ 则表明该列所对应元为**自由元**
+- $a[i][n + 1]$ $=$ $0$ 则表明该列所对应元为**自由元**
     
-    2. $a[i][n + 1]$ $!=$ $0$  则表明方程存在矛盾 **无解**
+- $a[i][n + 1]$ $!=$ $0$  则表明方程存在矛盾 **无解**
     
 否则 若唯一解 那么 $x_i$ 即为 $a[i][n + 1]$
 
