--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -41,8 +41,8 @@
 
 若非唯一解 则主元的取值取决于自由元的取值 一旦自由元已经确定 那么主元必定唯一确定
 
-| 情况     | 条件                              | 结果                   |
-| -------- | -------------------------------  | ---------------------- |
-| 无解     | 存在一行主元为 $0$ 且常数项不为 $0$ | ❌ 无解                |
-| 唯一解   | 每一列都有主元，无自由元            | ✅ 唯一解              |
-| 无穷多解 | 存在自由元                         | ♾️ 多解                |
+| 情况     | 条件                              |
+| -------- | -------------------------------  |
+| 无解     | 存在一行主元为 $0$ 且常数项不为 $0$ |
+| 唯一解   | 每一列都有主元，无自由元            |
+| 无穷多解 | 存在自由元                         |
