--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -46,3 +46,6 @@
 | 无解     | 存在一行主元为 $0$ 且常数项不为 $0$ |
 | 唯一解   | 每一列都有主元，无自由元            |
 | 无穷多解 | 存在自由元                         |
+
+实现上 , 由于加法方程组经常涉及到浮点数的运算 所以判断是否为 $0$ 需要利用一个常数 `eps = 1e-7`
+若值 $<=$ `eps` 则认为其为 $0$
