--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -5,7 +5,7 @@
 
 ---
 
-## 一、分类
+## 分类
 
 1. **加法方程组**（普通线性方程组）  
 2. **异或方程组**（在模 $2$ 意义下的线性方程组）  
@@ -14,7 +14,7 @@
 我们先从最常见的 **加法方程组** 入手。
 
 ---
-
+### 消元
 假设我们操作的是 $n$ 行 $n$ $+$ $1$ 列的矩阵
 
 因为即使 $n$ 行 $n$ $+$ $1$ 列的矩阵 , 我们仍然可以通过增加元或者增加方程的方法成为这样的矩阵
@@ -28,7 +28,7 @@
 否则若当前列为主元列 , 那么先将第 $i$ 行第 $i$ 列的值变为 $1$ 也就是第 $i$ 行全体 $/$ $a[i][i]$
 
 然后遍历每一行 使得其他所有行的第 $i$ 列全部消为 $0$
-
+### 解的情况
 消元结束之后遍历每一行 设当前为第 $i$ 行
 
 若 $a[i][i]$ $=$ $0$ 则有两种情况
