--- a/高斯消元法/总述.md
+++ b/高斯消元法/总述.md
@@ -68,8 +68,15 @@
 
 注意取余要 ((+ x) % mod + mod) % mod 最后算答案的时候要使用乘法逆元 找到这一列非 $0$ 的进行操作即可
 
-求解时 不再是简单的 $a[i][n + 1]$ 而是应该用 $a[i][n + 1]$ $\times$ $inv(a[i][i])$ 再取模
+求解时 不再是简单的 $a[i][n + 1]$ 而是应该用 $a[i][n + 1]$ $\times$ $inv(a[i][i])$ 再取模  (其中 $inv$ 表示逆元)
 
+那么在多解的情况下 如何构造出一组解呢?
+
+我们可以从让 $i$ 从第 $n$ 行开始倒着做 若 $a[i][i]$ 非 $0$ 那么为主元
+假设 $res$ $=$ $a[i][n + 1]$ 此时我们需要让 $j$ 从第 $i + 1$ 列开始 若 $a[i][j]$ 为 $0$ 则不考虑 否则需要让 $res$ 减去第 $j$ 列所对应的元的值
+最终答案即为 $res$ $\times$ $inv(a[i][i])$
+
+---
 
 ### 对比三者
 | 内容     | 加法方程组   | 异或方程组         | 同余方程组     |
