--- a/树链剖分/重链剖分/总述.md
+++ b/树链剖分/重链剖分/总述.md
@@ -111,15 +111,16 @@
     6   7
 ```
 
-假设 $2$ 是 $1$ 的重儿子，$5$ 是 $2$ 的重儿子；
+假设 $2$ 是 $1$ 的重儿子，$5$ 是 $2$ 的重儿子 
 
 则链划分结果为：
 
-重链 $1$ ：$1$ → $2$ → $5$
-重链 $2$ ：$3$
-重链 $3$ ：$4$
-重链 $4$ ：$6$
-重链 $5$ ：$7$
+重链 $1$ : $1$ → $2$ → $5$
+
+重链 $2$ : $3$
+重链 $3$ : $4$
+重链 $4$ : $6$
+重链 $5$ : $7$
 
 ---
 
