--- a/Mo's Algorithm/总述.md
+++ b/Mo's Algorithm/总述.md
@@ -1,4 +1,26 @@
-莫队算法是基于分块思想的只适用于处理离线询问的算法。
-以笔者现有的学习经验，莫队实际上是一种优雅的暴力算法。
-在时间限制为 1s 的情况下 普通莫队和回滚莫队的一般支持 N = 2e5
-而带修莫队 如果常数较小的话 N = 1e5 是可以接受的
+# 📊 莫队算法 **（Mo's Algorithm）**
+
+莫队算法是基于 **分块思想（Sqrt Decomposition）** 的，只适用于处理 **离线询问（Offline Queries）** 的算法。
+
+从笔者目前的学习经验来看，莫队本质上是一种 **优雅的暴力算法**。  
+
+它通过 **维护左右指针的移动顺序** 来在较低复杂度内回答多个区间询问。
+
+---
+
+## 一、算法特性
+
+- **思想核心**：通过对查询离线排序，最小化每次左右端点的移动距离  
+- **适用范围**：仅适用于 **可加可减的函数（即满足区间可维护性）** 经常用来处理**出现次数**
+- **复杂度**：约为 $O((N + Q) \sqrt{N})$
+
+---
+
+## 二、不同类型的莫队算法
+
+| 类型     | 说明                                   | 一般可支持的数据规模 (1s 内) |
+| -------- | -------------------------------------- | ---------------------------- |
+| 普通莫队 | 最基础版本，左右指针移动               | `N ≤ 2e5`                    |
+| 回滚莫队 | 对部分不可逆操作使用回滚技巧           | `N ≤ 2e5`                    |
+| 带修莫队 | 处理带修改的离线问题，需维护时间维度   | `N ≤ 1e5` (常数较小可接受)   |
+| 树上莫队 | 将树上路径查询通过括号序转化为区间问题 | `N ≤ 1e5`                    |
