--- a/Mo's Algorithm/普通莫队/总述.md
+++ b/Mo's Algorithm/普通莫队/总述.md
@@ -1,19 +1,55 @@
-用来解决一些可以**离线**的区间问题
+## 📘 普通莫队
 
-考虑朴素的区间问题做法，我们可以用 $l$ 和 $r$ 来表示我们当前的区间 $ql$ 和 $qr$ 表示查询的区间
+用于解决一些可以 **离线** 的区间问题。
 
-那么我只需要让 $l$ 和 $r$ 移动即可维护区间信息 但显然这样的时间复杂度是 $O(n^2)$
+---
 
-核心思想是将询问按照一定的规律排序使得上述过程的时间复杂度为 $O(n\sqrt{n})$
+### 一、基本思想
 
-采用 **分块** 的方法 , 在普通莫队中 , 我们一般将块长 $B$ 定义为 $\sqrt{n}$ 
+考虑朴素的区间问题做法，我们可以用 `l` 和 `r` 来表示当前维护的区间，用 `ql` 和 `qr` 表示查询区间。
 
-然后对于询问的 $l$ 和 $r$ 我们另外再记录一个 $bl$ 表示区间左端点的块号
+我们只需要让 `l` 和 `r` 移动即可维护区间信息，但显然这样的时间复杂度是 $O(n^2)$。
 
-于是我们的排序策略是 **以 $bl$ 从小到大为第一关键字 以 $r$ 从小到大为第二关键字**
+核心思想是通过 **对询问排序** 来减少指针移动，从而将时间复杂度降为 $O(n\sqrt{n})$。
 
-按照此顺序执行各个询问 区间滑动的最终复杂度为$O(n\sqrt{n})$
+---
 
-然后再进行区间滑动的过程即可
+### 二、分块与排序策略
 
-$add$  和 $dec$ 的内容根据具体题目决定
+采用 **分块（Sqrt Decomposition）** 的方法，在普通莫队中，一般将块长定义为  
+
+$$
+B = \sqrt{n}
+$$
+
+对于每个询问，我们记录：
+
+- `l`, `r`: 区间左右端点  
+- `bl`: 左端点所属的块号  
+
+排序规则如下：
+
+> **第一关键字**：`bl` 从小到大  
+> **第二关键字**：`r` 从小到大  
+
+按照此顺序执行所有询问，区间滑动的总复杂度为 $O(n\sqrt{n})$。
+
+---
+
+### 三、区间滑动过程
+
+在执行查询时，通过移动左右指针 `l` 与 `r` 并调用 `add` 或 `dec` 函数维护当前答案。
+
+`add` 和 `dec` 的具体内容依题目而定。
+
+```cpp
+int l = 1, r = 0;
+ans = 0;
+for (int i = 1; i <= m; i++) {
+    while (q[i].l < l) add(a[--l]);
+    while (q[i].r > r) add(a[++r]);
+    while (q[i].l > l) dec(a[l++]);
+    while (q[i].r < r) dec(a[r--]);
+    res[q[i].id] = ans;
+}
+```
