--- a/Mo's Algorithm/带修莫队/总述.md
+++ b/Mo's Algorithm/带修莫队/总述.md
@@ -1,19 +1,73 @@
-原理方面不过多赘述
+## 带修莫队
 
-首先 , 在带修莫队中 , 块长定义为 $n^\frac{2}{3}$ 而总体时间复杂度为 $O(n^\frac{5}{3})$ 
+------
 
-我们将操作分为两类
+在带修莫队中，块长定义为 $n^{\frac{2}{3}}$，而总体时间复杂度为 $O(n^{\frac{5}{3}})$。
 
-操作 $1$ : 单点修改操作 我们需要记录 $pos$ 和 $val$ 信息分别表示修改位置和修改值 另外 , 还需要记录该修改操作的编号 $num$
+------
 
-操作 $2$ : 区间查询操作 我们需要记录 $l$ , $r$ , $bl$ , $br$ , $id$ , $t$ 信息分别表示查询区间的端点 , 左右端点的块号 , 询问编号以及时间戳,这里的时间戳实际上就是此时的 $num$ 表示这个询问之前已经有多少个修改操作了
+### 一、操作分类
 
-然后 , 将操作 $2$ 按照如此下顺序排序 $:$
+我们将操作分为两类：
 
-以 $bl$ 为第一关键字从小到大排序 , 以 $br$ 为第二关键字从小到大排序 , 以 $t$ 为第三关键字从小到大排序
+#### ✅ 操作 1：单点修改操作
 
-依次遍历每个询问 窗口的滑动和上述过程相同
+我们需要记录以下信息：
 
-另外 我们需要建立一个时间戳窗口 $T$ 然后 $T$ 滑动到当前时间戳 滑动的过程中更新 让对应 $pos$ 的值和 $val$ 进行交换 同时如果 $pos$ 在当前的 $val$ 范围内 我们就需要另外对 $val$ 和 $a[pos]$ 的值进行修改
+- `pos`：修改位置
+- `val`：修改值
+- `num`：修改操作的编号
 
-$update$ 内容根据题目决定
+------
+
+#### ✅ 操作 2：区间查询操作
+
+我们需要记录以下信息：
+
+- `l, r`：查询区间的端点
+- `bl, br`：左右端点的块号
+- `id`：询问编号
+- `t`：时间戳（即此时的 `num`，表示该询问之前已有多少次修改操作）
+
+------
+
+### 二、排序策略
+
+将所有 **操作 2（查询）** 按照如下顺序排序：
+
+1. **以 `bl` 为第一关键字** —— 从小到大排序
+2. **以 `br` 为第二关键字** —— 从小到大排序
+3. **以 `t` 为第三关键字** —— 从小到大排序
+
+按照此顺序执行各个询问，窗口滑动方式与普通莫队相同。
+
+------
+
+### 三、时间维度的维护
+
+我们需要额外维护一个 **时间戳窗口 `T`**，用于同步当前修改的进度。
+ 令 `T` 滑动到目标时间戳，在滑动过程中执行以下操作：
+
+- 让对应 `pos` 的值与 `val` 进行 **交换**；
+- 若该 `pos` 在当前区间范围内，则还需对 `val` 和 `a[pos]` 的统计值进行 **更新**。
+
+函数 `update()` 的具体内容根据题目而定。
+
+------
+
+### 四、代码示例
+
+```
+// 带修莫队核心逻辑
+while (T < q[i].t) update(++T, q[i].l, q[i].r);
+while (T > q[i].t) update(T--, q[i].l, q[i].r);
+```
+
+------
+
+### 五、总结
+
+- 带修莫队在普通莫队的基础上新增了 **时间维度**；
+- 排序维度从两维 $(L, R)$ 扩展为三维 $(L, R, T)$
+- 适用于“修改 $+$ 查询”离线问题；
+- 一般在时间限制为 **1s** 的情况下支持 **$N$ $≈$ $1e5$**（常数较小时可以更大）。
