--- a/Mo's Algorithm/树上莫队/总述.md
+++ b/Mo's Algorithm/树上莫队/总述.md
@@ -82,5 +82,5 @@ r = st[v]
 
 - 树上莫队的本质是对 **括号序** 进行莫队操作，因此序列长度为 **`N = 2n`**。
 - 时间复杂度取决于采用的莫队类型：
-  - 若是普通莫队：$O(N \times \sqrt{N})$
-  - 若是带修莫队：$O(N^{\frac{5}{3}})$
+  - 若是普通莫队 : $O(N \times \sqrt{N})$
+  - 若是带修莫队 : $O(N^{\frac{5}{3}})$
