--- a/树的重心/总述.md
+++ b/树的重心/总述.md
@@ -1,14 +1,33 @@
-- 定义 $1$.以某个节点为根时最大子树的节点数最少
+树的重心（Tree Centroid）
 
-  ​	 $2$.以某个节点为根时每棵子树的节点均少于 $\frac{n}{2}$ 其中 $n$ 表示总结点数
+树的重心是树上一个非常重要的概念，通常用于优化分治、平衡划分等问题。
 
-  ​	 $3$.以某个节点为根时所有节点走到该点的边数之和最少
+一、重心的定义
 
-- 性质 $1$.最多有两个重心,如果存在两个重心那么他们一定相邻,此时树的节点数一定为偶数
+对于一棵树，节点 u 被称为 重心，需满足以下条件之一（等价描述）：
 
-  ​         $2$.如果在树上增或删一个节点,转移后的重心最多移动一条边
+以 u 为根时，最大子树的节点数最少。
 
-  ​         $3$.如果把两棵树连起来,那么新树的重心一定在原先两棵树的重心的路径上
+以 u 为根时，每棵子树的节点数均小于 $\frac{n}{2}$，其中 $n$ 为树的总节点数。
 
-  ​         $4$.如果树上边权非负,不管边权大小关系如何,所有节点走向重心的总距离和一定最小
+以 u 为根时，所有节点到该节点的 边数总和最少。
 
+二、重心的性质
+
+数量限制：最多有两个重心。如果存在两个重心，它们一定相邻。此时树的节点数必为偶数。
+
+增删节点：在树上增加或删除一个节点，转移后的重心最多移动一条边。
+
+连接两棵树：如果将两棵树连起来，新树的重心一定在原两棵树重心的路径上。
+
+边权非负：如果树上边权非负，不管边权大小如何，所有节点到重心的总距离一定最小。
+
+三、应用场景
+
+树的平衡分治
+
+树上路径优化
+
+树链剖分、树上莫队等高级算法的优化
+
+通过重心，可以在算法设计中保证子树规模均衡，从而降低复杂度和优化查询效率。
