--- a/树的重心/总述.md
+++ b/树的重心/总述.md
@@ -1,33 +1,79 @@
-树的重心（Tree Centroid）
+## 树的重心（Tree Centroid）
 
-树的重心是树上一个非常重要的概念，通常用于优化分治、平衡划分等问题。
+树的重心是树上一个非常重要的概念，在树的分治、平衡划分、路径优化等问题中具有广泛应用。  
+通过重心，可以保证树的子树大小相对平衡，从而优化复杂度。
 
-一、重心的定义
+---
 
-对于一棵树，节点 u 被称为 重心，需满足以下条件之一（等价描述）：
+### 一、重心的定义
 
-以 u 为根时，最大子树的节点数最少。
+节点 `u` 被称为 **重心**，需满足以下等价条件之一：
 
-以 u 为根时，每棵子树的节点数均小于 $\frac{n}{2}$，其中 $n$ 为树的总节点数。
+1. **最小最大子树**  
+   以 `u` 为根时，所有子树中 **最大子树的节点数最少**。
 
-以 u 为根时，所有节点到该节点的 边数总和最少。
+2. **子树节点数限制**  
+   以 `u` 为根时，每棵子树的节点数均小于 $\frac{n}{2}$，其中 $n$ 为树的总节点数。
 
-二、重心的性质
+3. **最短总距离**  
+   以 `u` 为根时，所有节点到该节点的 **边数总和最小**。
 
-数量限制：最多有两个重心。如果存在两个重心，它们一定相邻。此时树的节点数必为偶数。
+> 总结：重心是一个使树尽可能“平衡”的节点，同时可以最小化从树上所有节点到它的距离。
 
-增删节点：在树上增加或删除一个节点，转移后的重心最多移动一条边。
+---
 
-连接两棵树：如果将两棵树连起来，新树的重心一定在原两棵树重心的路径上。
+### 二、重心的性质
 
-边权非负：如果树上边权非负，不管边权大小如何，所有节点到重心的总距离一定最小。
+1. **数量限制**  
+   - 最多有两个重心。  
+   - 若存在两个重心，它们一定是 **相邻节点**。  
+   - 这种情况下，树的节点总数必为偶数。
 
-三、应用场景
+2. **增删节点的影响**  
+   - 在树上增加或删除一个节点，新的重心最多沿着一条边移动。  
+   - 说明树的重心具有 **局部稳定性**，便于动态维护。
 
-树的平衡分治
+3. **连接两棵树的情况**  
+   - 如果将两棵树连起来，新树的重心一定位于原来两棵树的重心 **路径上**。  
+   - 这保证了新树的平衡性和最短总距离特性。
 
-树上路径优化
+4. **边权非负的情况下**  
+   - 如果树上所有边权非负，不管边权大小如何，**所有节点到重心的总距离一定最小**。  
+   - 因此，重心也可以用作优化树上路径和距离相关问题的节点选择。
 
-树链剖分、树上莫队等高级算法的优化
+---
 
-通过重心，可以在算法设计中保证子树规模均衡，从而降低复杂度和优化查询效率。
+### 三、重心的计算方法
+
+1. **DFS求子树大小**  
+   - 以任意节点为根，计算每个节点的子树大小。  
+2. **求最大子树节点数**  
+   - 对每个节点，计算去掉该节点后其最大子树的节点数。  
+3. **选择重心**  
+   - 节点的最大子树节点数最小的节点即为重心。  
+   - 若存在两个节点同时满足条件，则它们即为两个重心（相邻）。
+
+---
+
+### 四、重心的应用
+
+1. **树的平衡分治**  
+   - 将树按重心拆分，保证子树规模相对均衡，从而降低递归复杂度。
+
+2. **树上路径优化**  
+   - 利用重心最小化总距离，优化树上总路径和或相关查询。
+
+3. **结合高级算法**  
+   - 树链剖分、树上莫队、树上差分等算法可以以重心作为初始根，提升效率。
+
+4. **动态树维护**  
+   - 增删节点时重心移动有限，可快速更新树的平衡状态。
+
+---
+
+### 五、总结
+
+- 重心是**树中最平衡的节点**，可以使子树大小均衡，总距离最小。  
+- 树的重心至多两个，相邻时树节点数为偶数。  
+- 可以结合树分治、树上莫队、树状数组等算法，实现高效树操作。  
+- 理解重心的性质有助于设计优化算法，保证树结构在增删节点和合并操作下仍然平衡。
