--- a/01分数规划/总述.md
+++ b/01分数规划/总述.md
@@ -70,7 +70,7 @@ $$
 
 - 计算 $c_i$：$O(n)$  
 - 筛选正贡献元素并求和：$O(n)$  
-- 二分答案精度为 $\epsilon$：$O(\log(\text{范围}/\epsilon))$  
+- 二分答案精度为 $\epsilon$:$O(\log(\text{范围}/\epsilon))$  
 
 **总体复杂度（仅考虑分数规划）：**
 $$
