--- a/分块/P2801.md
+++ b/分块/P2801.md
@@ -1,8 +1,8 @@
-本题有两种操作 区间 $+$ 和区间查询 $\ge C$ 的个数
+本题有两种操作 **区间 $+$** 和**区间查询 $\ge C$ 的个数**
 
 区间修改 区间查询 $\le$ 或者 $\ge$ 某个数的个数 通常想到分块而非线段树
 
-因为虽然 $push\_up$过程简单  但是在区间修改的过程中 我们是无法很好的维护好当前区间的满足条件的个数的
+因为虽然 $up$过程简单  但是在区间修改的过程中 我们是无法很好的维护好当前区间的满足条件的个数的
 
 而分块实际上是优雅的暴力
 
