Update and rename P3128.cpp to P3128.md

--- a/树上差分/P3128.md
+++ b/树上差分/P3128.md
@@ -33,7 +33,7 @@ constexpr int dx[] = { 1,-1,0,0 };
 constexpr int dy[] = { 0,0,1,-1 };
 constexpr ld eps = 1e-12;
 using namespace std;
-int n, q, sum[maxn], dep[maxn], f[maxn], father[maxn], ans[maxn];
+int n, q, sum[maxn]， dep[maxn]， f[maxn]， father[maxn]， ans[maxn];
 bool vis[maxn];
 vector<int> edge[maxn];
 vector<pair<int,int>> ask[maxn];
