--- a/树上差分/P3128.md
+++ b/树上差分/P3128.md
@@ -1,7 +1,12 @@
 点差分统计数量的模板题
-同时本题的代码使用了 Tarjan 算法来求解 lca 时间复杂度是线性的 但是要求询问 必须可以离线!
+
+代码使用了 `Tarjan` 算法来求解 $LCA$ 
+
+时间复杂度是线性的 但是要求询问 必须可以离线!更推荐使用树剖和倍增法来求 $LCA$
 
 
+
+```cpp
 #include<iostream>
 #include<cmath>
 #include<cstdio>
