Update and rename P2680.cpp to P2680.md

--- a/树上差分/P2680.md
+++ b/树上差分/P2680.md
@@ -1,5 +1,28 @@
-首先看到题设想到二分 然后
+看到 "自由选择某一条" 容易想到**判断存在性** 又要求**最小值** 考虑二分答案
 
+首先 题目中要**静态**查询两点之间的距离 由于静态 所以我们无须考虑树剖等做法 直接使用 $LCA$ 利用距离公式求即可
+
+假设我们当前二分的答案为 $mid$ 当前考虑的路径是从 $u_i\to v_i$ 距离为 $w_i$
+
+假设 $w_i \le mid$ 不删除边就符合条件 直接跳过即可
+
+否则 $w>mid$ 我们将从 $u_i \to v_i$  上的每一条边都加上 $1$ 的标记 
+
+同时非法边数 $cnt$ 也要 $+1$ 还需要记录 $w_i$ 的最大值 $W$
+
+然后 我们考虑每一条边
+
+假设当前边 $i$ 上的标记次数恰好为 $cnt$ **说明每一条非法路径都会经过这条边** 这条边可能能通过删除使得 $mid$ 合法
+
+此时我们继续判断 如果 $W - val_i \le mid$  那么说明**删除这条边确实可以使得答案合法** 因为最大路径的长度删掉这条件都符合条件了 那么其他边一定也符合条件 直接返回 `true` 即可
+
+而给每一条边打标记 就是边差分做的事情 直接套用边差分的模板即可
+
+
+
+代码如下 : 
+
+```cpp
 #include<iostream>
 #include<cmath>
 #include<cstdio>
@@ -134,3 +157,5 @@ int main() {
 	solve();
 	return 0;
 }
+```
+
