--- a/CDQ/P3810.md
+++ b/CDQ/P3810.md
@@ -5,7 +5,6 @@
 那么很好解决 我们只需要在CDQ分治之前提前将这种情况下的答案记录下来即可
 
 因为树状数组比较熟练了 所以我们直接写注释讲解本题
-
 ```cpp
 #include<algorithm>
 #include<bitset>
@@ -27,42 +26,13 @@
 using namespace std;
 
 typedef long long ll;
-typedef long double ld;
-typedef unsigned long long ull;
 constexpr int mod = 1e9 + 7;
-constexpr ll inf = 1e18;
-constexpr ld eps = 1e-8;
-constexpr int intinf = 1e9;
-
-#define lson(x) x << 1
-#define rson(x) x << 1 | 1
-
-ll gcd(ll x, ll y) {
-    return(y == 0 ? x : gcd(y, x % y));
-}
-
-ll ksm(ll a, ll b) {
-    if (b < 0) return 0;
-    ll res = 1;
-    while (b) {
-        if (b & 1) res = res * a;// % mod;
-        a = a * a;// % mod;
-        b >>= 1;
-    }
-    return res;
-}
-
-int lowbit(int x) {
-    return x & (-x);
-}
 
 constexpr int maxn = 2e5 + 10;
 constexpr int N = 20;
 constexpr int Base = 13;
 constexpr int dx[] = { 0,0,1,-1 };
 constexpr int dy[] = { 1,-1,0,0 };
-constexpr int primes[] = { 2,3,5,7,11,13,17,19,23,29,31,37,41,43 };
-//these primes' product > 1e16
 
 int n, k, tr[maxn], ans[maxn];
 
@@ -95,48 +65,49 @@ bool cmp2(node c1, node c2) {
 }
 
 void merge(int l, int r) {
+    //利用树状数组解决二维偏序问题
     int mid = (l + r) / 2;
     int i = l;
-    vector<int> a;
+    //i 为当前区间的左半部分 j 为当前区间的右半部分
+    vector<int> a;//为了处理完这个询问后就清空 所以我们要记录下来有多少个数被添加了
     for (int j = mid + 1; j <= r; j++) {
-        while (i <= mid && v[i].b <= v[j].b) {
+        while (i <= mid && v[i].b <= v[j].b) {//利用双指针 把 b 比当前的小的 c 值加进去
             add(v[i].c, 1);
             a.push_back(v[i].c);
             i++;
         }
-        ans[v[j].id] += query(v[j].c);
+        ans[v[j].id] += query(v[j].c);//去查询有多少比当前的 c 更小的
     }
     for (auto v : a)
-        add(v, -1);
-    sort(v + l, v + r + 1, cmp2);
+        add(v, -1);//清空 防止影响后续
+    sort(v + l, v + r + 1, cmp2);//结束后按照第二维排序
 }
 
 void CDQ(int l, int r) {
     if (l == r) return;
     int mid = (l + r) / 2;
-    CDQ(l, mid);
-    CDQ(mid + 1, r);
-    merge(l, r);
-    //for (int i = 1; i <= k; i++)
-    //    cout << tr[i] << " \n"[i == k];
+    CDQ(l, mid);//采用归并分治的思想 先调用左半部分
+    CDQ(mid + 1, r);//再调用右半部分
+    merge(l, r);//然后左右合并 同时记录答案
 }
 
 void solve() {
     cin >> n >> k;
     for (int i = 1; i <= n; i++) {
         cin >> v[i].a >> v[i].b >> v[i].c;
-        v[i].id = i;
+        v[i].id = i;//将问题离线 记录标号
     }
-    sort(v + 1, v + n + 1, cmp1);
+    sort(v + 1, v + n + 1, cmp1);//第一次排序 按照 a 从小到大排序即可 a 相同时按照 b 从小到大即可
     int r = 1;
     for (int i = 1; i <= n; i++) {
         while ((r + 1 <= n) && v[r + 1].a == v[i].a && v[r + 1].b == v[i].b && v[r + 1].c == v[i].c)
             r++;
         if (v[r].a == v[i].a && v[r].b == v[i].b && v[r].c == v[i].c)
-            ans[v[i].id] += r - i;
+            ans[v[i].id] += r - i;//单独考虑 a b c三者全部相同的答案
     }
-    CDQ(1, n);
+    CDQ(1, n);//第一次排序之后 a 已经有序了 将问题降维为了二维偏序问题 调用 CDQ 分治
     vector<int> f(n + 1);
+    //从此开始计算答案 不再赘述
     for (int i = 1; i <= n; i++)
         f[ans[i]]++;
     for (int i = 0; i < n; i++)
@@ -146,10 +117,9 @@ void solve() {
 signed main() { 
     ios::sync_with_stdio(false); cin.tie(nullptr);
     int T = 1;
-    //prework();
-    //cin >> T;
     while (T--) {
         solve();
     }
     return 0;
 }
+```
