Update and rename P3478.cpp to P3478.md

--- a/换根dp/P3478.md
+++ b/换根dp/P3478.md
@@ -1,6 +1,14 @@
-换根dp的模板题 
+换根 $DP$ 模板题 ，其思想已经讲述的很清楚了，这里主要画图展示换根逻辑以及以注释代码的形式讲解具体细节。
 
+![](https://raw.githubusercontent.com/unicornshjl/MyPic/img/test/08433a156eb175431d553d58a3f0e470.jpg)
 
+本题中的换根逻辑如上所示：当根从 $4$ 转移到 $5$ 时，绿色部分到根的距离全部 $-1$ 而粉色部分到根的距离全部 $+1$
+
+也就表明，当根从 $u$ 转移到其子节点 $v$ 时候，$v$ 的子树内部节点到根距离全部 $ - 1$ 而其余所有节点到根距离全部 $+1$
+
+那么我们已知 $dp[u]$ 的情况下 $dp[v] = dp[u] - siz[v] + n - siz[v]$
+
+```cpp
 #include<algorithm>
 #include<bitset>
 #include<climits>
@@ -22,56 +30,15 @@
 using namespace std;
 
 typedef long long ll;
-typedef long double ld;
-typedef unsigned long long ull;
-//constexpr int mod = 1e9 + 7;
 constexpr ll inf = 1e18;
 constexpr ld eps = 1e-8;
 constexpr int intinf = 1e9 + 1e8;
-
-#define lson(x) x << 1
-#define rson(x) x << 1 | 1
-
-ll read() {
-    ll s = 0, w = 1;
-    char c = getchar();
-    while (c < '0' || c >'9') {
-        if (c == '-') w = -1;
-        c = getchar();
-    }
-    while (c >= '0' && c <= '9') {
-        s = s * 10 + c - 48;
-        c = getchar();
-    }
-    return s * w;
-}
-
-ll gcd(ll x, ll y) {
-    return(y == 0 ? x : gcd(y, x % y));
-}
-
-ll ksm(ll a, ll b) {
-    if (b < 0) return 0;
-    ll res = 1;
-    while (b) {
-        if (b & 1) res = res * a;// % mod;
-        a = a * a;// % mod;
-        b >>= 1;
-    }
-    return res;
-}
-
-int lowbit(int x) {
-    return x & (-x);
-}
 
 constexpr int maxn = 1e6 + 10;
 constexpr int N = 20;
 constexpr int Base = 13;
 constexpr int dx[] = { 0,0,1,-1 };
 constexpr int dy[] = { 1,-1,0,0 };
-constexpr int primes[] = { 2,3,5,7,11,13,17,19,23,29,31,37,41,43 };
-//these primes' product > 1e16
 
 int n;
 ll siz[maxn], sum[maxn], dp[maxn];
@@ -90,6 +57,8 @@ void dfs1(int u, int fa) {
         siz[u] += siz[v];
         sum[u] += sum[v] + siz[v];
     }
+    //以上为第一次 dfs , 由换根逻辑可知我们需要知道 u 的子树大小 siz[u]
+    //而我们为了得到 u 的答案 , 所以也需要用 sum[u] 来保存 u 子树内所有节点到 u 的距离
 }
 
 void dfs2(int u, int fa) {
@@ -98,6 +67,7 @@ void dfs2(int u, int fa) {
         dp[v] = dp[u] - siz[v] + n - siz[v];
         dfs2(v, u);
     }
+    //以上为第二次 dfs , 执行换根逻辑
 }
 
 void solve() {
@@ -107,10 +77,10 @@ void solve() {
         cin >> u >> v;
         add(u, v); add(v, u);
     }
-    dfs1(1, 0);
+    dfs1(1, 0);//以 1 为根进行第一次 dfs
     dp[1] = sum[1];
-    dfs2(1, 0);
-    ll MAX = 0;
+    dfs2(1, 0);//以 1 为根进行第二次 dfs
+    ll MAX = 0;//以下为找答案
     int ans;
     for (int i = 1; i <= n; i++) {
         if (dp[i] > MAX) {
@@ -122,11 +92,8 @@ void solve() {
 
 signed main() { 
     ios::sync_with_stdio(false); cin.tie(nullptr);
-    int T = 1;
-    //prework();
-    //cin >> T;
-    while (T--) {
-        solve();
-    }
+    solve();
     return 0;
 }
+
+```
