--- a/换根dp/P3478.md
+++ b/换根dp/P3478.md
@@ -2,11 +2,11 @@
 
 ![](https://raw.githubusercontent.com/unicornshjl/MyPic/img/test/08433a156eb175431d553d58a3f0e470.jpg)
 
-本题中的换根逻辑如上所示：当根从 $4$ 转移到 $5$ 时，绿色部分到根的距离全部 $-1$ 而粉色部分到根的距离全部 $+1$
+本题中的换根逻辑如上所示：当根从 $4$ 转移到 $5$ 时，绿色部分到根的距离全部 $-1$ 而粉色部分到根的距离全部 $+1。$
 
-也就表明，当根从 $u$ 转移到其子节点 $v$ 时候，$v$ 的子树内部节点到根距离全部 $ - 1$ 而其余所有节点到根距离全部 $+1$
+也就表明，当根从 $u$ 转移到其子节点 $v$ 时候，$v$ 的子树内部节点到根距离全部 $-1$ 而其余所有节点到根距离全部 $+1。$
 
-那么我们已知 $dp[u]$ 的情况下 $dp[v] = dp[u] - siz[v] + n - siz[v]$
+那么我们已知 $dp_u$ 的情况下 $dp_v = dp_u - siz_v + n - siz_v。$
 
 ```cpp
 #include<algorithm>
